# tutorial_django

./: .gitignore  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
core/: models.py  views.py
core/migrations/: 0001_initial.py
polls/: models.py  tests.py  views.py
polls/migrations/: 0001_initial.py
polls/polls/templates/polls/: detail.html  index.html
