[tool.poetry]
name = "polls-project"
version = "0.1.0"
description = "Django project with PostgreSQL"
authors = ["Luan Esdras <zluan009@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
djangorestframework = "^3.16.0"
django-environ = "^0.12.0"
psycopg2-binary = "^2.9.10"
ruff = "^0.11.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
